dovecot (1.0.rc26-1) unstable; urgency=low

  * New upstream release.

 -- Fabio Tranchitella <kobold@debian.org>  Wed,  7 Mar 2007 11:20:11 +0100

dovecot (1.0.rc25-1) unstable; urgency=low

  * New upstream release.

 -- Fabio Tranchitella <kobold@debian.org>  Fri,  2 Mar 2007 13:44:44 +0100

dovecot (1.0.rc24-1) unstable; urgency=low

  * New upstream release.

 -- Fabio Tranchitella <kobold@debian.org>  Fri, 23 Feb 2007 15:47:30 +0100

dovecot (1.0.rc23-1) unstable; urgency=low

  * New upstream release.
  * debian/patches/documentation.dpatch, debian/patches/xfs_quotas.dpatch:
    removed, applied upstream.

 -- Fabio Tranchitella <kobold@debian.org>  Wed, 21 Feb 2007 09:34:44 +0100

dovecot (1.0.rc22-2) UNRELEASED; urgency=low

  * debian/watch: added.

 -- Fabio Tranchitella <kobold@debian.org>  Fri,  9 Feb 2007 12:15:34 +0100

dovecot (1.0.rc22-1) unstable; urgency=low

  * New upstream release.

 -- Fabio Tranchitella <kobold@debian.org>  Wed,  7 Feb 2007 09:38:34 +0100

dovecot (1.0.rc21-1) unstable; urgency=low

  * New upstream release.

 -- Fabio Tranchitella <kobold@debian.org>  Mon,  5 Feb 2007 16:23:33 +0100

dovecot (1.0.rc19-1) unstable; urgency=low

  * New upstream release.

 -- Fabio Tranchitella <kobold@debian.org>  Wed, 24 Jan 2007 00:03:38 +0100

dovecot (1.0.rc18-2) unstable; urgency=low

  * dovecot-sieve: updated to cvs version 1.0.1.
  * debian/README.Debian: updated for the new setting mail_location, which
    substitutes the old default_mail_env. (Closes: #408025)

 -- Fabio Tranchitella <kobold@debian.org>  Tue, 23 Jan 2007 10:15:36 +0100

dovecot (1.0.rc18-1) unstable; urgency=low

  * New upstream release.

 -- Fabio Tranchitella <kobold@debian.org>  Mon, 22 Jan 2007 18:15:02 +0100

dovecot (1.0.rc17-1) unstable; urgency=low

  * New upstream release.
  * Updated dovecot-sieve from CVS.

 -- Fabio Tranchitella <kobold@debian.org>  Fri, 12 Jan 2007 09:42:47 +0100

dovecot (1.0.rc15-2) unstable; urgency=medium
