@@ -1,0 +1,4 @@
+974e50066b04792901228a5fe8fada7e  unstable_1.0.rc24-1
+c56e1580610e921aea1da1f6c9ae49ed  sarge_0.99.14-1sarge0
+974e50066b04792901228a5fe8fada7e  testing_1.0.rc15-2
+f6efcb30fc2bf0c2f0bed4b6c24f7b3d  testing-security_1.0.beta2-1.1etch1
