@@ -1,0 +1,4 @@
+76ce200ddd6962746ecdb36e72590e82  unstable_1.0.rc24-1
+9fca885eadd54b94201f876d3b1d0bcc  sarge_0.99.14-1sarge0
+1c5a8f791371eff93658754031d96d20  testing_1.0.rc15-2
+b6b57eb97e7de54bf8235b0b325f1dec  testing-security_1.0.beta2-1.1etch1
