@@ -9,7 +9,7 @@ Standards-Version: 3.7.2.1
 
 Package: dovecot-common
 Architecture: any
-Depends: ${shlibs:Depends}, libpam-runtime (>= 0.76-13.1), openssl, adduser
+Depends: ${shlibs:Depends}, libpam-runtime (>= 0.76-13.1), openssl, adduser, ucf (>= 0.8)
 Replaces: dovecot
 Description: secure mail server that supports mbox and maildir mailboxes
  Dovecot is a mail server whose major goals are security and extreme
