@@ -2,6 +2,7 @@ etc
 etc/ssl/certs
 etc/ssl/private
 usr/sbin
+usr/share/dovecot
 usr/share/lintian/overrides
 var/run/dovecot
 var/run/dovecot/login
