@@ -5,6 +5,24 @@ PATH=/usr/sbin:$PATH
 export PATH
 
 if [ "$1" = "purge" ] ; then
+	for conffile in dovecot.conf dovecot-ldap.conf dovecot-sql.conf ; do
+		# we mimic dpkg as closely as possible, so we remove configuration
+		# files with dpkg backup extensions too:
+		### Some of the following is from Tore Anderson:
+		for ext in '~' '%' .bak .dpkg-tmp .dpkg-new .dpkg-old .dpkg-dist;  do
+			rm -f /etc/dovecot/$conffile$ext
+		done
+		# remove the configuration file itself
+		rm -f /etc/dovecot/$conffile
+		# and finally clear it out from the ucf database
+		if which ucf >/dev/null; then
+			ucf --purge /etc/dovecot/$conffile
+		fi
+		if which ucfr >/dev/null; then
+			ucfr --purge dovecot-common /etc/dovecot/$conffile
+		fi
+	done
+
         userdel dovecot || true;
 	cd /etc/ssl/certs
 	PATH=$PATH:/usr/bin/ssl
