@@ -86,10 +86,12 @@ install: build
 	$(MAKE) install prefix=$(CURDIR)/debian/dovecot-common/usr sysconfdir=$(CURDIR)/debian/dovecot-common/etc/dovecot
 	$(MAKE) -C dovecot-sieve install prefix=$(CURDIR)/debian/dovecot-common/usr
 	# cp $(CURDIR)/src/drac/drac.so $(CURDIR)/debian/dovecot-common/usr/lib/dovecot/modules
-	mv $(CURDIR)/debian/dovecot-common/etc/dovecot/dovecot-example.conf $(CURDIR)/debian/dovecot-common/etc/dovecot/dovecot.conf
-	chmod 0600 $(CURDIR)/debian/dovecot-common/etc/dovecot/dovecot.conf
-	install -o root -g root -m 0600 $(CURDIR)/doc/dovecot-ldap.conf $(CURDIR)/debian/dovecot-common/etc/dovecot/dovecot-ldap.conf
-	install -o root -g root -m 0600 $(CURDIR)/doc/dovecot-sql.conf $(CURDIR)/debian/dovecot-common/etc/dovecot/dovecot-sql.conf
+	mv $(CURDIR)/debian/dovecot-common/etc/dovecot/dovecot-example.conf $(CURDIR)/debian/dovecot-common/usr/share/dovecot/dovecot.conf
+	install -o root -g root -m 0644 $(CURDIR)/doc/dovecot-ldap.conf $(CURDIR)/debian/dovecot-common/usr/share/dovecot/dovecot-ldap.conf
+	install -o root -g root -m 0644 $(CURDIR)/doc/dovecot-sql.conf $(CURDIR)/debian/dovecot-common/usr/share/dovecot/dovecot-sql.conf
+	install -o root -g root -m 0644 $(CURDIR)/debian/conffile.md5sum/dovecot.conf.md5sum $(CURDIR)/debian/dovecot-common/usr/share/dovecot/
+	install -o root -g root -m 0644 $(CURDIR)/debian/conffile.md5sum/dovecot-ldap.conf.md5sum $(CURDIR)/debian/dovecot-common/usr/share/dovecot/
+	install -o root -g root -m 0644 $(CURDIR)/debian/conffile.md5sum/dovecot-sql.conf.md5sum $(CURDIR)/debian/dovecot-common/usr/share/dovecot/
 	install -D -m 0755 -o root -g root debian/maildirmake.dovecot $(CURDIR)/debian/dovecot-common/usr/bin/maildirmake.dovecot
 	install -o root -g root -m 0644 $(CURDIR)/debian/dovecot-common.overrides $(CURDIR)/debian/dovecot-common/usr/share/lintian/overrides/dovecot-common
 	mv $(CURDIR)/debian/dovecot-common/usr/share/doc/dovecot $(CURDIR)/debian/dovecot-common/usr/share/doc/dovecot-common
